// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput should with default styles 1`] = `
.circuit-2 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.21);
  color: #212933;
  padding: 8px 12px;
  font-size: 15px;
  line-height: 24px;
  padding-right: 40px;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-1 {
  padding: 0;
  margin: 0;
  display: inline-block;
  background-color: transparent;
  border: none;
  cursor: default;
}

.circuit-1:focus,
.circuit-1:active {
  outline: none;
}

<div
  className="circuit-2"
  data-selector="password-input"
  disabled={false}
>
  <input
    className="circuit-0"
    disabled={false}
    placeholder="Password"
    type="password"
  />
  <button
    className="circuit-1"
    disabled={false}
    onClick={[Function]}
  >
    <div>
      eye.svg
    </div>
  </button>
</div>
`;

exports[`PasswordInput should with disabled styles 1`] = `
.circuit-2 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.21);
  color: #212933;
  padding: 8px 12px;
  font-size: 15px;
  line-height: 24px;
  opacity: 0.5;
  pointer-events: none;
  padding-right: 40px;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-1 {
  padding: 0;
  margin: 0;
  display: inline-block;
  background-color: transparent;
  border: none;
  cursor: default;
}

.circuit-1:focus,
.circuit-1:active {
  outline: none;
}

.circuit-1 button {
  opacity: 0.4;
  pointer-events: none;
}

<div
  className="circuit-2"
  data-selector="password-input"
  disabled={true}
>
  <input
    className="circuit-0"
    disabled={true}
    placeholder="Password"
    type="password"
  />
  <button
    className="circuit-1"
    disabled={true}
    onClick={[Function]}
  >
    <div>
      eye.svg
    </div>
  </button>
</div>
`;
